# openthread-mcp

./: README.md  pyproject.toml
openthread_mcp/: cli.py  exporter.py  parsers.py  server.py
